@@ -19,6 +19,30 @@ class C_Article extends B_Controller
     }
 
     /**
+     * Format article results
+     */
+    protected function formatArticles($results)
+    {
+        $articles = array();
+
+        $ct = $this->session()->getCulture();
+        $tz = $this->session()->getTimezone();
+
+        foreach($results as $a)
+        {
+            $zd = new Zend_Date(strtotime($a['article_date']), false, $ct);
+            $zd->setTimezone($tz);
+
+            $articles[] = array_merge($a, array
+            (
+                'article_date_local' => $zd->toString()
+            ));
+        }
+
+        return $articles;
+    }
+
+    /**
      * List articles for a specified user blog feed
      *
      */
@@ -29,10 +53,8 @@ class C_Article extends B_Controller
         $older = strtotime($this->request()->older);
         $user_id = $this->session()->user_profile_id;
 
-        $this->view()->articles = UserBlogFeed::findArticlesThreaded
-        (
-            $blog_hash, $user_id, $feed_hash, $older
-        );
+        $this->view()->articles = $this->formatArticles(
+            UserBlogFeed::findArticlesThreaded($blog_hash, $user_id, $feed_hash, $older));
 
         $this->session()->user_blog_hash = $blog_hash;
     }
@@ -47,10 +69,8 @@ class C_Article extends B_Controller
         $older = strtotime($this->request()->older);
         $user_id = $this->session()->user_profile_id;
 
-        $this->view()->articles = UserBlogFeed::findArticlesAll
-        (
-            $blog_hash, $user_id, $older
-        );
+        $this->view()->articles = $this->formatArticles(
+            UserBlogFeed::findArticlesAll($blog_hash, $user_id, $older));
 
         $this->session()->user_blog_hash = $blog_hash;
     }
