@@ -1,1 +1,1 @@
-INSERT INTO model_user_profile (hash, login_email_local, login_email_domain, login_password_md5, register_confirmation) VALUES ('bBcCdDfF', 'rafael', 'castilho.biz', MD5('castilho'), 1);
+INSERT INTO model_user_profile (hash, login_email_local, login_email_domain, login_password_md5, register_confirmation, local_culture, local_timezone) VALUES ('bBcCdDfF', 'rafael', 'castilho.biz', MD5('castilho'), 1, 'pt_BR', 'America/Sao_Paulo');
